@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Implement CLOSE_CONNECTION=ALWAYS to suppress the connection pooling
+  for a particular layer.
+
 - Implemented RFC 67: Enable/Disable layers in ogc web services (#3703)
 
 - Class title can now be used in legends. It's value takes precedence over class name. Previously
